--- a/friends.html
+++ b/friends.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Friends | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/c1c5bfb014.js"
@@ -10,16 +11,18 @@
     ></script>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
+    <div class="status-bar__fixed">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
     </div>
     <header class="header">
@@ -35,12 +38,12 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/siba.jpg" class="g-avatar" />
+            <img src="images/one.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Hunuck
+                NahongE
               </span>
               <span class="friend__status">
                 nothing TO DO
@@ -49,11 +52,11 @@
           </div>
         </div>
       </header>
-      <div class="friends__plus-friend">
-        <h5 class="friends__plus-title">Plus friend</h5>
+      <div class="friends__plus">
+        <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/siba.jpg" class="g-avatar" />
+            <img src="images/Bravo.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -64,22 +67,114 @@
       </div>
       <ul class="friends__list">
         <h5 class="friends__title">Friends 5</h5>
-        <li class="friends__friend friend--lg">
+        <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/siba.jpg" class="g-avatar" />
-            <div class="friend__content">
-              <span class="friend__name">
-                Hunuck
-              </span>
-              <span class="friend__status">
-                nothing TO DO
-              </span>
+            <div class="friend__felxwrap">
+              <img src="images/love.jpg" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  Hunuck
+                </span>
+                <span class="friend__status">
+                  nothing TO DO
+                </span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span
+                  >FTISLAND (FT nomadCoders) <i class="fas fa-play"></i
+                ></span>
+              </div>
             </div>
           </div>
+        </li>
+        <!-- 친구2 -->
+        <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <div class="friend__now-listening">
-              <span>FTISLAND (FT nomadCoders)</span>
-              <i class="fas fa-play"></i>
+            <div class="friend__felxwrap">
+              <img src="images/dog.jpg" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  doggy
+                </span>
+                <span class="friend__status">
+                  :-)
+                </span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span
+                  >FTISLAND (FT nomadCoders) <i class="fas fa-play"></i
+                ></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="friends__friend friend friend--lg">
+          <div class="friend__column">
+            <div class="friend__felxwrap">
+              <img src="images/simpsons.jpg" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  simpsons
+                </span>
+                <span class="friend__status">
+                  D'OH-!!
+                </span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span
+                  >FTISLAND (FT nomadCoders) <i class="fas fa-play"></i
+                ></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="friends__friend friend friend--lg">
+          <div class="friend__column">
+            <div class="friend__felxwrap">
+              <img src="images/jing.jpg" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  Squidward Q.
+                </span>
+                <span class="friend__status">
+                  Clarinet~♬
+                </span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span
+                  >FTISLAND (FT nomadCoders) <i class="fas fa-play"></i
+                ></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="friends__friend friend friend--lg">
+          <div class="friend__column">
+            <div class="friend__felxwrap">
+              <img src="images/siba.jpg" class="friend__avatar" />
+              <div class="friend__content">
+                <span class="friend__name">
+                  Don't like
+                </span>
+                <span class="friend__status">
+                  ???
+                </span>
+              </div>
+            </div>
+            <div class="friend__column">
+              <div class="friend__now-listening">
+                <span
+                  >FTISLAND (FT nomadCoders) <i class="fas fa-play"></i
+                ></span>
+              </div>
             </div>
           </div>
         </li>
@@ -109,5 +204,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
   </body>
 </html>
