--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Chats | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/c1c5bfb014.js"
@@ -10,18 +11,21 @@
     ></script>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
+    <div class="status-bar__fixed">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
     </div>
+
     <header class="header">
       <div class="header__header-column">
         <h1 class="header__title">Chats</h1>
@@ -39,20 +43,51 @@
     <main class="chats">
       <ul class="chats__list">
         <li class="chats__chat chat">
-          <a href="">
-            <div class="chat__column">
-              <img
-                src="images/siba.jpg"
-                class="chat__avater"
-                class="g-avater"
-              />
-              <div class="chat__content">
-                <span class="chat__username">Sol.E</span>
-                <span class="chat__preview">Going home!!!</span>
+          <a href="chat.html">
+            <div class="chats__chat friend friend--lg" id="chats_flex">
+              <div class="friend__column">
+                <img src="images/love.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Lover
+                  </span>
+                  <span class="friend__bottom-text">
+                    ♥
+                  </span>
+                </div>
+              </div>
+              <div class="friend__column">
+                <span class="chat__timestamp">
+                  July 15
+                </span>
+                <!-- <i class="fas fa-play"></i> -->
               </div>
             </div>
-            <div class="chat__column">
-              <spna class="chat__timestamp">Yesterday</spna>
+          </a>
+        </li>
+        <li class="chats__chat chat">
+          <a href="#">
+            <div class="chats__chat friend friend--lg" id="chats_flex">
+              <div class="friend__column">
+                <img src="images/siba.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Don't like
+                  </span>
+                  <span class="friend__bottom-text">
+                    ???
+                  </span>
+                </div>
+              </div>
+              <div class="friend__column" id="column__badeg">
+                <span class="chat__timestamp">
+                  July 14
+                </span>
+                <span class="chat__badeg">
+                  10
+                </span>
+                <!-- <i class="fas fa-play"></i> -->
+              </div>
             </div>
           </a>
         </li>
@@ -66,8 +101,9 @@
           ></a>
         </li>
         <li class="nav__list-item">
-          <a href="index.html" class="nav__list-link"
-            ><i class="fas fa-comment"></i
+          <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">10</div>
+            <i class="fas fa-comment"></i
           ></a>
         </li>
         <li class="nav__list-item">
@@ -82,5 +118,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
   </body>
 </html>
