--- a/more.html
+++ b/more.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>More | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/c1c5bfb014.js"
@@ -10,16 +11,18 @@
     ></script>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
+    <div class="status-bar__fixed">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
     </div>
     <header class="header">
@@ -27,12 +30,16 @@
         <h1 class="header__title">More</h1>
       </div>
       <div class="header__header-column">
-        <span class="header__icon"> <i class="fas fa-search"></i></span>
+        <span class="header__icon">
+          <i class="fas fa-search"></i>
+        </span>
         <span class="header__icon">
           <i class="fas fa-qrcode"></i>
         </span>
         <span class="header__icon">
-          <a href="setting.html"> <i class="fas fa-cog"></i></a>
+          <a href="setting.html">
+            <i class="fas fa-cog"></i>
+          </a>
         </span>
       </div>
     </header>
@@ -40,18 +47,22 @@
       <header class="more__header">
         <div class="friends__friend friend--lg">
           <div class="friend__column">
-            <img src="images/siba.jpg" class="g-avatar" />
-            <div class="friend__content">
+            <img
+              src="images/one.jpg"
+              class="g-avatar friend__avatar"
+              id="myimg"
+            />
+            <div class="friend__content" id="mycontent">
               <span class="friend__name">
-                Hunuck
+                NahongE
               </span>
               <span class="friend__status">
-                Hunuck.gmail.com
+                NahongE@gmail.com
               </span>
             </div>
           </div>
           <div class="friend__column">
-            <i class="far fa-comment-alt fa-2x"></i>
+            <!-- <i class="far fa-comment-alt fa-2x"></i> -->
           </div>
         </div>
         <ul class="more__btn-list">
@@ -85,11 +96,15 @@
             <span class="suggestion__tilte">Kakao Story</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion__icon"><i class="fas fa-beer"></i></span>
+            <span class="suggestion__icon"
+              ><i class="fas fa-beer fa-2x"></i
+            ></span>
             <span class="suggestion__tilte">Kakao friends</span>
           </li>
           <li class="more__suggestion suggestion">
-            <span class="suggestion__icon"><i class="fas fa-gamepad"></i></span>
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad fa-2x"></i
+            ></span>
             <span class="suggestion__tilte">Friends Gem</span>
           </li>
         </ul>
@@ -119,5 +134,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
   </body>
 </html>
