--- a/setting.html
+++ b/setting.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Settings | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/c1c5bfb014.js"
@@ -10,22 +11,24 @@
     ></script>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">13:54</span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
+    <div class="status-bar__fixed">
+      <div class="status-bar">
+        <div class="status-bar__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
+        <div class="status-bar__column">
+          <i class="fas fa-clock"></i>
+          <i class="fas fa-volume-mute"></i>
+          <i class="fas fa-wifi"></i>
+          <span class="status-bar__battery-level">100%</span>
+          <i class="fas fa-battery-full"></i>
+        </div>
       </div>
     </div>
     <header class="header">
       <div class="header__header-column">
         <a href="more.html" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left"></i>
         </a>
 
         <h1 class="header__title">Settings</h1>
@@ -38,23 +41,48 @@
       <section class="setting__sections">
         <ul class="settings__list">
           <li class="settings__stting">
-            <spna class="settings__icon">
-              <i class="fas fa-lock"></i>
-            </spna>
-            <span class="setting__title">Privacy</span>
+            <span class="settings__icon">
+              <i class="fas fa-bullhorn"></i>
+            </span>
+            <span class="setting__title">Notice</span>
           </li>
           <li class="settings__stting">
-            <spna class="settings__icon"> <i class="far fa-bell"></i> </spna>
-            <span class="setting__title">Notifications</span>
+            <span class="settings__icon">
+              <i class="fas fa-flask"></i>
+            </span>
+            <span class="setting__title">Lab</span>
           </li>
           <li class="settings__stting">
-            <spna class="settings__icon">
+            <span class="settings__icon">
+              <i class="fas fa-info-circle"></i>
+            </span>
+            <span class="setting__title">Version</span>
+          </li>
+        </ul>
+      </section>
+      <section class="settings__sections">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon"><i class="fas fa-lock"></i> </span>
+            <span class="settings__title">Privacy</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings__title">Notifications</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
               <i class="far fa-user"></i>
-            </spna>
-            <span class="setting__title">Friends</span>
+            </span>
+            <span class="settings__title">Friends</span>
           </li>
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
   </body>
 </html>
